meta: Add docker image built in ci